<resources>
    <string name="app_name">SunFlowerOrder</string>
    <string name="sales_order">Sales Order</string>
    <string name="delivery">Delivery</string>
    <string name="collection">Collection</string>
    <string name="select_customer">Select a Customer</string>
    <string name="date_format">DD/MM/YY</string>
    <string name="order_date">Order Date</string>
    <string name="add_item">Add Item</string>
    <string name="brand_name">Choose a Brand Name</string>
    <string name="product_name">Choose a Product Name</string>
    <string name="product_name_alone">Product Name</string>
    <string name="product_code">Product Code</string>
    <string name="available_quantity">Available Quantity</string>
    <string name="order_quantity">Order Quantity</string>
    <string name="sample_quantity">1</string>
    <string name="price">Price</string>
    <string name="total_amount">Total Amount</string>
    <string name="add_order_item">Add an Order Item</string>
    <string name="submit_order">Submit Order</string>
    <string name="approval_no">Approval No</string>
    <string name="quantity">Quantity</string>
    <string name="qty">Qty</string>
    <string name="submit_delivery">Submit Delivery</string>
    <string name="ordered_quantity">Ordered Quantity</string>
    <string name="rejected_quantity">Rejected Quantity</string>
    <string name="accept_qty">Accepted</string>
    <string name="rejected_qty">Rejected</string>
    <string name="remarks">Remarks</string>
    <string name="ok">OK</string>
    <string name="enter_remarks">Enter Remarks</string>
    <string name="invoice_no">InvoiceNo</string>
    <string name="invoice_amout">Inv Amt</string>
    <string name="pending">Pending</string>
    <string name="cash_format">1,00,000</string>
    <string name="invoice_date">Invoice Date</string>
    <string name="paid_amt">Paid Amount</string>
    <string name="balance_amt">Balance Amount</string>
    <string name="collection_amount">Collection amount</string>
    <string name="update">Update Item</string>
    <string name="uom">uom</string>
    <string name="currency_symbol">$</string>
    <string name="coll_no">Coll No</string>
    <string name="payment_mode">Payment Mode</string>
    <string-array name="payment_mode">
        <item>Cash</item>
        <item>Credit</item>
    </string-array>
    <string-array name="collection_mode">
        <item>Cash</item>
        <item>Bank</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_userId">User ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sales_order_report">Sales Order Report</string>
    <string name="collection_report">Collection Report</string>
    <string name="delivery_report">Delivery Report</string>
    <string name="delivery_item_title">Delivery an Item</string>
    <string name="collection_title">Collection</string>
    <string name="balance_amount">Balance Amount</string>
    <string name="logout">Logout</string>
    <string name="accepted_quantities">Accepted</string>
    <string name="customer_name">Customer Name</string>
    <string name="collected">Collected Amount</string>
    <string name="select_a_warehouse">Select a Warehouse</string>
    <string name="choose_below_product">Choose below Product</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_details">Update Order Details</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
</resources>
