<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/icon_button"
    tools:context=".OrderItem">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_order_brandName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/item_spacing"
            android:clickable="true"
            android:drawableRight="@drawable/ic_right_arrow"
            android:text="@string/brand_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_order_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_spacing"
            android:clickable="true"
            android:drawableRight="@drawable/ic_right_arrow"
            android:text="@string/product_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_order_brandName" />

        <LinearLayout
            android:id="@+id/layout_product_uom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_spacing"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/tv_order_product_name">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/product_code" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/unit_of_measurement" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_order_available_qty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_spacing"
            android:text="@string/available_quantity"
            app:layout_constraintTop_toBottomOf="@id/layout_product_uom" />

        <EditText
            android:id="@+id/edit_order_qty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_spacing"
            android:hint="@string/order_quantity"
            app:layout_constraintTop_toBottomOf="@id/tv_order_available_qty" />

        <EditText
            android:id="@+id/edit_order_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_spacing"
            android:hint="@string/price"
            app:layout_constraintTop_toBottomOf="@id/edit_order_qty" />

        <TextView
            android:id="@+id/tv_order_total_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_spacing"
            android:text="@string/total_amount"
            app:layout_constraintTop_toBottomOf="@id/edit_order_price" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_add"
            android:text="@string/add_item"
            app:layout_constraintTop_toBottomOf="@id/tv_order_total_amount" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>