<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_item_background"
    android:orientation="horizontal"
    android:layout_marginTop="@dimen/icon_button"
    android:padding="@dimen/item_spacing">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fg_tv_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name" />

        <TextView
            android:id="@+id/fg_tv_brand_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brand_name" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fg_tv_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:text="@string/price" />

        <TextView
            android:id="@+id/fg_tv_qty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:text="@string/order_quantity" />


    </LinearLayout>
</LinearLayout>
