<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/item_spacing"
    android:background="@drawable/list_item_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/coll_item_inv_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/invoice_no"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/coll_item_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/date_format"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="@string/invoice_amout" />

        <TextView
            android:id="@+id/coll_item_inv_amt"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="@string/cash_format" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="Bal Amt" />


        <TextView
            android:id="@+id/coll_item_bal_amt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:gravity="right"
            android:text="@string/cash_format" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="@string/collection" />

        <TextView
            android:id="@+id/coll_item_coll_amt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"


            android:text="@string/cash_format" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="@string/pending" />


        <TextView
            android:id="@+id/coll_item_pending_amt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:gravity="right"
            android:text="@string/cash_format" />
    </LinearLayout>

</LinearLayout>