<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/item_spacing"
    android:background="@color/deep_purple"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="2"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/del_rpt_customer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/select_customer" />

        <TextView
            android:id="@+id/del_rpt_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="right"
            android:text="@string/date_format" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/del_rpt_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:layout_weight="1"
            android:text="@string/product_name_alone" />

        <TextView
            android:id="@+id/del_rpt_qty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textColor="@color/colorPrimaryDark"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/quantity" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <TextView
            android:id="@+id/del_rpt_accept_qty"
            android:layout_width="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/item_spacing"
            android:text="5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/item_spacing"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/rejected_qty" />

        <TextView
            android:id="@+id/del_rpt_reject_qty"
            android:layout_width="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/item_spacing"
            android:text="3" />

        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:layout_height="wrap_content"
            android:text="@string/accept_qty" />


    </LinearLayout>

</LinearLayout>