<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frag_frame_order"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:layout_margin="@dimen/list_item_padding"
    android:padding="@dimen/list_item_padding"
    tools:context=".fragments.OrderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/list_item_padding"

            android:text="@string/order_details"
            android:textColor="@color/colorAccent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorAccent"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/frag_order_qty_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/list_item_padding"

            android:textColorHint="@color/black"

            android:hint="@string/order_quantity">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/frag_order_qty"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/frag_order_price_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:layout_margin="@dimen/list_item_padding"

            android:hint="@string/price">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/frag_order_price"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_frag_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_margin="@dimen/list_item_padding"
                android:drawableTint="@color/white"
                android:text="@string/cancel" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_frag_submit"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/list_item_padding"
                android:drawableTint="@color/white"


                android:text="@string/submit" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>